--- a/index.css
+++ b/index.css
@@ -1,3 +1,22 @@
-#heading{
-    color: red;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+.logo{
+    width:100px;
+}
+
+.navitem{
+    padding: 0px 20px;
+}
+.navitems>ul {
+    font-size: 24px;
+    display: flex;
+    list-style-type:none;
+}
+
+.navitems>ul> li{
+    padding: 10px;
+    margin:  10px;
 }
