--- a/index.css
+++ b/index.css
@@ -20,3 +20,48 @@
     padding: 10px;
     margin:  10px;
 }
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.res-card{
+width: 200px;
+margin: 5px;
+/* border:1px solid black; */
+}
+.search{
+    padding:10px;
+}
+
+.res-logo{
+    padding:5px;
+    width :150px;
+}
+
+.res-card:hover{
+    cursor: pointer;
+    border: 1px solid black;
+}
+.filter{
+    display: flex;
+}
+.filter-btn{
+    margin:  10px;
+    cursor: pointer;
+}
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.shimmer-card{
+    margin: 20px;
+    width: 200px;
+    height: 400px;
+    background-color: grey;
+}
+
+.login{
+    padding:10px;
+    margin: 5px;
+}
