--- a/index.css
+++ b/index.css
@@ -1,67 +1,3 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-}
-.logo{
-    width:100px;
-}
-
-.navitem{
-    padding: 0px 20px;
-}
-.navitems>ul {
-    font-size: 24px;
-    display: flex;
-    list-style-type:none;
-}
-
-.navitems>ul> li{
-    padding: 10px;
-    margin:  10px;
-}
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-.res-card{
-width: 200px;
-margin: 5px;
-/* border:1px solid black; */
-}
-.search{
-    padding:10px;
-}
-
-.res-logo{
-    padding:5px;
-    width :150px;
-}
-
-.res-card:hover{
-    cursor: pointer;
-    border: 1px solid black;
-}
-.filter{
-    display: flex;
-}
-.filter-btn{
-    margin:  10px;
-    cursor: pointer;
-}
-
-.shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-.shimmer-card{
-    margin: 20px;
-    width: 200px;
-    height: 400px;
-    background-color: grey;
-}
-
-.login{
-    padding:10px;
-    margin: 5px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
